# axum-maud-template

./: Cargo.toml
src/: main.rs
src/pages/: index.rs  mod.rs
