[package]
name = "axum_maud_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-server = "0.6.0"
maud = { version = "0.26.0", features = ["axum"] }
mime = "0.3.17"
mime_guess = "2.0.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
utils = { git = "https://github.com/s-0fia/custom-util-rs", features = ["timeprint"] }
